--- a/index.html
+++ b/index.html
@@ -4,6 +4,26 @@
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name='description' content='Fast & free distributed decentralized pastebin'>
+    <!--
+    SeedBin: a distributed pastebin with ipfs and webtorrent
+    Copyright (C) 2017 Kevin Forman (beardog108) https://ChaosWebs.net/
+
+    This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU Affero General Public License as
+published
+    by the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU Affero General Public License for more details.
+
+    You should have received a copy of the GNU Affero General Public
+License
+    along with this program.  If not, see
+<http://www.gnu.org/licenses/>.
+    -->
     <title>SeedBin</title>
     <link rel='icon' href='favicon.png'>
     <link rel='stylesheet' href='min.css'>
